--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>🤖 TDS Data Analyst Agent</h1>
+      <h1>TDS Project 2</h1>
       <p>Upload your questions file and optional dataset to get intelligent answers with visualizations</p>
     </div>
 
